fix: filp card on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -342,11 +342,12 @@ header.visible span {
   position: relative;
   width: 100%;
   height: 100%;
+  perspective: 1000px;
 }
 
 .card {
-  transform-style: preserve-3d;
   transition: 0.4s ease-in-out;
+  transform-style: preserve-3d;
 }
 
 .card img {
